<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:orientation="vertical" >
     </LinearLayout>

    <TextView
        android:id="@+id/moduleanmeldung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/qis"
        android:layout_alignBottom="@+id/qis"
        android:layout_alignParentRight="true"
        android:layout_marginRight="41dp"
        android:autoLink="web"
        android:text="@string/moduleanmeldung_fhlinks"
         />

    <TextView
        android:id="@+id/qis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/modulehandbook"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="56dp"
        android:text="@string/qis_fhlinks" />

    <TextView
        android:id="@+id/Insurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/modulehandbook"
        android:layout_alignBottom="@+id/modulehandbook"
        android:layout_alignLeft="@+id/qis"
        android:text="@string/insurance_fhlinks" />

    <TextView
        android:id="@+id/Library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/internationaloffice"
        android:layout_alignBottom="@+id/internationaloffice"
        android:layout_alignLeft="@+id/sports"
        android:text="@string/library_fhlinks" />

    <TextView
        android:id="@+id/modulehandbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/moduleanmeldung"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/modulehandbook_fhlinks" />

    <TextView
        android:id="@+id/internationaloffice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/softwaredownload"
        android:layout_below="@+id/softwaredownload"
        android:layout_marginTop="18dp"
        android:text="@string/international_fhlinks" />

    <TextView
        android:id="@+id/idw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/modulehandbook"
        android:layout_below="@+id/internationaloffice"
        android:layout_marginTop="19dp"
        android:text="@string/idw_fhlinks" />
    <TextView
        android:id="@+id/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/softwaredownload"
        android:layout_alignBottom="@+id/softwaredownload"
        android:layout_alignLeft="@+id/Insurance"
        android:text="@string/sports_fhlinks"
         />
    

    <TextView
        android:id="@+id/softwaredownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/modulehandbook"
        android:layout_below="@+id/modulehandbook"
        android:layout_marginTop="20dp"
        android:text="@string/software_fhlinks" />

    <TextView
        android:id="@+id/studentenwerk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/idw"
        android:layout_below="@+id/idw"
        android:layout_marginTop="19dp"
        android:text="@string/studentenwerk_fhlinks" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/idw"
        android:layout_alignBottom="@+id/idw"
        android:layout_alignLeft="@+id/Library"
        android:text="@string/email_fhlinks" />

    <TextView
        android:id="@+id/lms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/studentenwerk"
        android:layout_alignLeft="@+id/email"
        android:text="@string/lms_fhlinks" />
    
</RelativeLayout>