<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/userlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/userlogin" />

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back"
         />

    <TextView
        android:id="@+id/useraddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/userlogin"
        android:layout_marginTop="36dp"
        android:text="@string/useraddress" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextpass"
        android:layout_centerVertical="true"
        android:layout_marginRight="49dp"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="33dp"
        android:text="@string/password" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_button"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/useraddress"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reset_button"
        android:layout_alignBottom="@+id/reset_button"
        android:layout_toRightOf="@+id/button3"
        android:text="@string/login" />

    <EditText
        android:id="@+id/editTextpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/useraddress"
        android:layout_alignBottom="@+id/useraddress"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_alignParentRight="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_alignLeft="@+id/editTextpass"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>