<?xml version="1.0" encoding="UTF-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="446dp" >

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
         android:text="@string/back"/>

    <TextView
        android:id="@+id/userregistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/back"
        android:layout_alignBottom="@+id/back"
        android:layout_centerHorizontal="true"
        android:text="@string/user_registration" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/useraddress"
        android:layout_marginTop="24dp"
        android:text="@string/password" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_button"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:text="AutoCompleteTextView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/reset" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/userregistration"
        android:ems="10" />

    <TextView
        android:id="@+id/useraddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextUser"
        android:layout_alignParentLeft="true"
        android:text="@string/useraddress" />

    <EditText
        android:id="@+id/EditTextpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUser"
        android:layout_below="@+id/editTextUser"
        android:ems="10" />

    <EditText
        android:id="@+id/editTextCofirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:text="@string/confirmpass" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/register" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCofirm"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextCofirm"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextEmail"
        android:layout_alignBottom="@+id/editTextEmail"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/matno" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="21dp"
        android:text="@string/studentaddress" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/userregistration"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <Spinner
        android:id="@+id/spinnerSem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spinnerSem"
        android:text="@string/semester" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/back"
        android:layout_below="@+id/spinnerSem"
        android:layout_marginTop="16dp"
        android:text="@string/courses" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerSem"
        android:ems="10" />

</RelativeLayout>
</ScrollView>